# woerk_rag

./: .env.example  .gitignore  ADMIN_README.md  AGENT_USAGE.md  CLAUDE.md  DEPLOY_GUIDE.md  EMBEDDING_HOT_RELOAD.md  QUICK_START.md  README.md  SETUP_GUIDE.md  claude_desktop_config.json  config.py  gunicorn_config.py  pyproject.toml  rag.db  requirements.txt
admin/: CLAUDE.md  __init__.py  auth.py  database.py  models.py  password_validator.py  rate_limiter.py  routes.py  schemas.py  usage_logger.py
admin_frontend/: CLAUDE.md  index.html  package-lock.json  package.json
agent/: __init__.py  core.py  tools.py
api/: CLAUDE.md  mcp_routes.py  server.py
eval/: CLAUDE.md  evaluator.py  test_cases.json
indexer/: CLAUDE.md  chunker.py  code_indexer.py  doc_indexer.py  incremental.py  index_all.py
knowledge_graph/: __init__.py  entity_extractor.py  graph_store.py
mcp_server/: CLAUDE.md  __init__.py  server.py
mcp_server_ts/: package-lock.json  package.json  tsup.config.ts
multimodal/: __init__.py
prompts/: knowledge_manager.md
qa/: CLAUDE.md  __init__.py  chain.py  cli.py  conversation_summarizer.py
retriever/: CLAUDE.md  hybrid_search.py  keyword_index.py  query_rewriter.py  reranker.py  semantic_cache.py  vector_optimizer.py  vector_store.py
scripts/: CLAUDE.md  config.sh  deploy-admin.sh  deploy.sh  graceful-restart.sh  index_project.sh  logs.sh  migrate_multi_user.py  quick-deploy-new.sh  quick-deploy.sh  restore_knowledge.py  start-mcp-server.sh  start_api.sh  start_qdrant.sh
static/: index.html
utils/: CLAUDE.md  config_manager.py  llm.py  (+8 more)
(+35 files in other folders)
