[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "0.1.0"
description = "RAG Knowledge Base MCP Server - Query and manage your personal knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Li" }
]
keywords = ["mcp", "rag", "knowledge-base", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
rag-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/fengshao1227/woerk_rag"
Repository = "https://github.com/fengshao1227/woerk_rag"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
